Fix markdown contrast

--- a/styles/languages/markdown.less
+++ b/styles/languages/markdown.less
@@ -23,10 +23,16 @@
     }
   }
 
-  .syntax--list, .syntax--quote {
-    color: @very-lively-gray;
+  .syntax--list {
     .syntax--punctuation {
       color: @accent-col2 !important;
+    }
+  }
+
+  .syntax--quote {
+    color: @lively-gray;
+    .syntax--punctuation {
+      color: @accent-col4 !important;
     }
   }
 
